# pvr.python

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
examples/: cctv-en.py
pvr.python/: PVRDemoAddonSettings.xml  addon.xml.in  genre-numbers.txt  libpvr.py  noop.py  pvrimpl.py
pvr.python/examples/: abc.py  australia.py  cctv-en.py
src/: PVRDemoData.cpp  PVRDemoData.h  client.cpp  client.h
